##Text encoding: utf-8

2010-09-28  Jean Bréfort  <jean.brefort@normalesup.org>
	* database/elecprops.xml.in: added elements 117 and 118.
	* database/elements.xml.in: ditto.
	* libs/gcu/element.cc: don't crash if no electronegativity is known.
	* programs/table/gchemtable-elt.cc: don't crash if weight is unknown.
	* ui/libgcu/gcuperiodic.ui: added elements 117 and 118.

2010-09-26  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/objprops.h: add more spectrum related properties.
	* libs/gcu/spectrumdoc.cc: ditto.
	* plugins/loaders/nuts/nuts.cc: imports the time related data.

2010-09-25  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/application.cc: enhance the command context API.
	* libs/gcp/application.h: ditto.
	* libs/gcr/atom.cc: fixed Atpm::SetProperty().
	* libs/gcu/application.cc: enhance the command context API.
	* libs/gcu/application.h: ditto.
	* libs/gcu/chem3ddoc.cc: ditto.
	* libs/gcu/cmd-context-gtk.cc: ditto.
	* libs/gcu/cmd-context-gtk.h: ditto.
	* libs/gcu/cmd-context.cc: ditto.
	* libs/gcu/cmd-context.h: ditto.
	* libs/gcu/loader.cc: ditto.
	* libs/gcu/loader.h: ditto.
	* mozilla-plugin/chem-viewer.cc: ditto.
	* programs/crystal/application.cc: ditto.
	* programs/spectra/application.cc: ditto.

2010-09-24  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/application.cc: use CmdContext instead of gtk to display
	messages when serializing.
	* libs/gcr/document.h: fixed typo in docs.
	* libs/gcu/cmd-context-gtk.cc: add Message method.
	* libs/gcu/cmd-context-gtk.h: ditto.
	* libs/gcu/cmd-context.h: ditto.
	* libs/gcu/objprops.h: add spectrum related entries.
	* libs/gcu/spectrumdoc.cc: implement GetProperty().
	* libs/gcu/spectrumdoc.h: ditto.
	* plugins/loaders/nuts/nuts.cc: load data to the document.
	* programs/paint/standaloneapp.cc: don't return an invalid window.

2010-09-22  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/Makefile.am: some work on command contexts.
	* libs/gcu/application.cc: ditto.