@@ -954,7 +954,8 @@ void Bond::OnLoaded ()
 	if (m_Begin && m_End && GetParent ()->GetType () != MoleculeType) {
 		Object *obj = new Molecule (static_cast <gcp::Atom *> (m_Begin));
 		obj->SetDirty ();
-	}
+	} else
+		GetParent ()->SetDirty ();
 }
 
 }	//	namespace gcp
